BUG#21033  The error log of mysqld shows useless information, and hides the real error.